--- a/test/_tensor/operator/CMakeLists.txt
+++ b/test/_tensor/operator/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.8)
-project(subscript)
+set(ADD add)
+set(SUBSCRIPT subscript)
+set(NOW ${ADD})
+project(${NOW})
 include_directories(../../../muldia/include ../../../muldia/src ../../../muldia/test)
 
 add_definitions("-g")
-add_executable(subscript ../../../muldia/src/name.cpp ../../../muldia/src/shape.cpp ../../../test/_tensor/operator/subscript.cpp)
+add_executable(${NOW} ../../../muldia/src/name.cpp ../../../muldia/src/shape.cpp ../../../test/_tensor/operator/${NOW}.cpp)
